--- a/qmis.css
+++ b/qmis.css
@@ -1,3 +1,8 @@
+body {
+	background: url("stars_bg.png");
+	background-color: #cccccc;
+}
+
 html {
 	font-family: "Open Sans";
 }
@@ -31,14 +36,12 @@ button {
 }
 
 button:hover {
-	background-color:#f44336;
+	background-color: #a8a8a8;
 }
 
 button:active {
-	background-color: #d63024;
+	background-color: #727272;
 }
-
-
 
 .start_button {
 	display: flex;
@@ -46,7 +49,3 @@ button:active {
 	justify-content: center;
 	margin-top: 10%;
 }
-
-body {
-	background: url("stars_bg.png");
-	background-color: #cccccc;
