Organized items into different folders

--- a/qmis.css
+++ b/qmis.css
@@ -1,5 +1,5 @@
 body {
-	background: url("title_page(updated).png") center center fixed;
+	background: url("./backgrounds/title_page(updated).png") center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
