--- a/qmis_play.css
+++ b/qmis_play.css
@@ -7,3 +7,32 @@ body {
 	background-repeat: no-repeat;
 	background-position: top center;
 }
+
+.eq_box {
+	position: absolute;
+	font-family: Helvetica;
+	opacity: .5;
+	border-width: 5px;
+	border-style: solid;
+	border-color: #D7E1EC;
+	background-color: #4D97EB;
+	border-radius: 5px;
+	text-align: center;
+	width: 40%;
+	height: 25%;
+	padding-left: 4%;
+	padding-right: 4%;
+	bottom: 0%;
+	right: 10%;
+}
+
+.canvas {
+	/*background-color: red;*/
+	position: absolute;
+	bottom: 0;
+	top: 0;
+	left:0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
