--- a/qmis_play.css
+++ b/qmis_play.css
@@ -8,17 +8,21 @@ body {
 	background-position: top center;
 }
 
+button {
+	border-radius: 5px;
+	background-color: #4CAF50;	
+}
 .eq_box {
 	position: absolute;
 	font-family: Helvetica;
-	opacity: .5;
+	opacity: .65;
 	border-width: 5px;
 	border-style: solid;
 	border-color: #D7E1EC;
 	background-color: #4D97EB;
 	border-radius: 5px;
 	text-align: center;
-	width: 40%;
+	width: 20%;
 	height: 25%;
 	padding-left: 4%;
 	padding-right: 4%;
@@ -33,4 +37,8 @@ body {
 	top:0;
 	width: 85%;
 	height: 70%;
+}
+
+#equation {
+	font-size: 25px;
 }
