--- a/qmis_play.css
+++ b/qmis_play.css
@@ -15,7 +15,7 @@ button {
 .eq_box {
 	position: absolute;
 	font-family: Helvetica;
-	opacity: .65;
+	opacity: .9;
 	border-width: 5px;
 	border-style: solid;
 	border-color: #D7E1EC;
@@ -41,4 +41,13 @@ button {
 
 #equation {
 	font-size: 25px;
+}
+
+#submit_field {
+	margin-top: 5%;
+	font-size: 20px;
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 2px;
+	opacity: 1;
 }
