--- a/qmis_play.css
+++ b/qmis_play.css
@@ -9,6 +9,7 @@ body {
 }
 
 button {
+	position: relative; 
 	border-radius: 5px;
 	background-color: #4CAF50;	
 }
@@ -43,11 +44,15 @@ button {
 	font-size: 25px;
 }
 
-#submit_field {
-	margin-top: 5%;
+#sub_button {
+	right: 5%;
+	position: absolute;
+	top: 65%;
 	font-size: 20px;
+	width: 15%;
 	border-radius: 5px;
 	border-style: solid;
 	border-width: 2px;
 	opacity: 1;
 }
+
