--- a/qmis.css
+++ b/qmis.css
@@ -1,5 +1,6 @@
 body {
-	background: url("./backgrounds/title_page(updated).png") center center fixed;
+	content: '';
+	background: url("../backgrounds/title_page(updated).png") center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -56,7 +57,7 @@ button:active {
 	outline: none;
 	top: 65%;
 	left: 33%;
-	background: url("./game models/start_button2.png") center no-repeat;
+	background: url("../game models/start_button2.png") center no-repeat;
 	cursor: pointer;
 	width: 31%;
 	height: 24%;
@@ -65,7 +66,7 @@ button:active {
 }
 
 .start_button:hover {
-	background: url("./game models/start_button1.png") center no-repeat;
+	background: url("../game models/start_button1.png") center no-repeat;
 	background-size: cover;
 	width: 31%;
 	height: 24%;
