--- a/qmis_play.css
+++ b/qmis_play.css
@@ -1,5 +1,5 @@
 body {
-	background: url("./backgrounds/math_explorer(background_updated).png") center center fixed;
+	background: url("backgrounds/math_explorer(background_updated).png") center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
