--- a/qmis.css
+++ b/qmis.css
@@ -1,6 +1,6 @@
 body {
 	content: '';
-	background: url("../backgrounds/title_page(updated).png") center center fixed;
+	background: url("../backgrounds/Title_Page(Updated).png") center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
