--- a/qmis_play.css
+++ b/qmis_play.css
@@ -1,5 +1,5 @@
 body {
-	background: url("backgrounds/Math_Explorer(Background_Updated).PNG") center center fixed;
+	background: url("./backgrounds/Math_Explorer(Background_Updated).PNG") center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
