--- a/qmis_play.css
+++ b/qmis_play.css
@@ -1,4 +1,5 @@
 body {
+	content: '';
 	background: url("./backgrounds/Math_Explorer(Background_Updated).PNG") center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
