--- a/qmis.css
+++ b/qmis.css
@@ -73,6 +73,16 @@ button:active {
 
 }
 
+.canvas {
+	position:absolute;
+	right: 0;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	width: 5%;
+	height: 5%;
+}
+
 #earth {
 	position: absolute;
 	left:-20%;
@@ -89,4 +99,36 @@ button:active {
 
 #song {
 	visibility: hidden;
+}
+
+#astroboi {
+	animation-name: "astro";
+	-webkit-animation-name: "astro";
+	-webkit-animation-duration: 20s;
+	animation-timing-function: linear;
+	animation-duration:20s;
+	animation-iteration-count: infinite;
+
+}
+
+@keyframes astro {
+/*	from {left:1%; top:15%; transform: rotate(360deg);}
+	to {left:100%; top: 45%; opacity:0;}*/
+	0% {left: 0%; top:15%; transform: rotate(0deg);opacity:0;}
+	25% {left: 25%; top: 15%;transform: rotate(90deg);opacity:.5 ;}
+	50% {left: 50%; top: 15%;transform: rotate(180deg);opacity:1;}
+	75% {left: 75%; top: 15%;transform: rotate(270deg); opacity: .5;}
+	100% {left: 94%; top: 15%;transform: rotate(360deg); opacity: 0;}
+
+}
+
+@-webkit-keyframes astro{
+	from {
+		bottom:85%;
+		right: 90%;
+	}
+	to 	{
+		bottom: 85%;
+		right:90%;
+	}
 }
