--- a/qmis_play.css
+++ b/qmis_play.css
@@ -1,4 +1,5 @@
 body {
+	color: #1E2766;
 	content: '';
 	background: url("./backgrounds/Math_Explorer(Background_Updated).png") center center fixed;
 	-webkit-background-size: cover;
@@ -56,6 +57,25 @@ button {
 	opacity: 1;
 }
 
+.start_button {
+	visibility: hidden;
+	z-index: 1;
+	position: absolute;
+	outline: none;
+	top: 45%;
+	left: 33%;
+	background: url("./game models/Start_Button2.png") center no-repeat;
+	cursor: pointer;
+	width: 31%;
+	height: 24%;
+	background-size: cover;
+	border: none;
+}
+
+.start_button:hover {
+	background: url("./game models/Start_Button3.png") center no-repeat;
+	background-size: cover;
+}
 #song {
 	visibility: hidden;
 }
