--- a/home.css
+++ b/home.css
@@ -29,29 +29,6 @@ img {
 	bottom: 0;
 }
 
-button {
-	position: absolute;
-	top:70%;
-	text-align: center;
-	border: none;
-	color: #ffffff;
-	padding: 1% 2%;
-	font-size: 400%;
-	background-color: #a8a8a8;
-	border: 8px solid #ffffff;
-	border-radius: 2px;
-	cursor: pointer;
-	outline-style: none
-}
-
-button:hover {
-	background-color: #3378e8;
-}
-
-button:active {
-	background-color: #2356a8;
-}
-
 .start_button {
 	position: absolute;
 	outline: none;
@@ -132,3 +109,18 @@ button:active {
 		right:90%;
 	}
 }
+
+/*.instructions {
+	position: absolute;
+	color: #f46b42;
+	background-color: #f9f9f9;
+	padding: 1% 2%;
+	top: 53%;
+	left: 25%;
+	border-radius: 10px;
+	opacity: .95;
+	font-weight: bold;
+	border-style: solid;
+	border-width: 5px;
+	border-color: #c9cccb;
+}*/
